test/test_11813225_5.out
Error type 3 at Line 5: a variable is redefined in the same scope
Error type 7 at Line 6: unmatching operands
Error type 8 at Line 8: a function’s return value type mismatches the declared type
