test/test_11813225_5.spl
int rubbish()
{
  int aa;
  float bb;
  int aa;
  if (aa > bb)
  {
    return 'v';
  }
}